[package]
name = "splitter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rabbitizer = "1.8.1"
# serde = "1.0.196"
serde = { version = "1.0.196", features = ["rc"] }
serde_derive = "1.0.196"
serde_json = "1.0.112"

[dev-dependencies]
regex = "1.10.3"
similar = "2.4.0"
